<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main6">

    <Button
        android:id="@+id/btn_h_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="56dp"
        android:onClick="onclick11"
        android:text="@string/btn_h_d"
        app:backgroundTint="#F44336"
        app:layout_constraintStart_toEndOf="@+id/btn_h_u"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="415dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/history" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="406dp"
        android:layout_height="343dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_h"
        app:srcCompat="@drawable/record" />

    <Button
        android:id="@+id/btn_h_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="56dp"
        android:onClick="onclick10"
        android:text="@string/btn_h_u"
        app:backgroundTint="#FF9800"
        app:layout_constraintStart_toEndOf="@+id/btn_h_b"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <Button
        android:id="@+id/btn_h_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:onClick="onclick9"
        android:text="@string/btn_h_b"
        app:backgroundTint="#56A3B6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/tv_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_h"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
</androidx.constraintlayout.widget.ConstraintLayout>