<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="sum"
    tools:context=".main">

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_height"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_weight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_height" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:onClick="sum"
        android:text="@string/btn_ok"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#56A3B6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

    <EditText
        android:id="@+id/Etheight"
        android:layout_width="201dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/tv_height" />

    <EditText
        android:id="@+id/Etweight"
        android:layout_width="194dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/tv_weight" />

    <TextView
        android:id="@+id/tv_ans"
        android:layout_width="69dp"
        android:layout_height="31dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:onClick="sum"
        android:text="@string/tv_ans"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toEndOf="@+id/btn_ok" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="259dp"
        android:layout_height="183dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ans"
        app:srcCompat="@drawable/bmi" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nav1" />

    <Button
        android:id="@+id/btn_vhis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:onClick="OnClick14"
        android:text="@string/btn_vhis"
        app:backgroundTint="#56A3B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>