<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main7">


    <Button
        android:id="@+id/btn_e_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="72dp"
        android:text="@string/btn_e_u"
        app:backgroundTint="#FF9800"
        app:layout_constraintStart_toEndOf="@+id/btn_e_b"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="407dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/history" />

    <TextView
        android:id="@+id/tv_edi"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_edi"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="372dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edi"
        app:srcCompat="@drawable/record" />

    <Button
        android:id="@+id/btn_e_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="72dp"
        android:onClick="onclick12"
        android:text="@string/btn_e_b"
        app:backgroundTint="#56A3B6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
</androidx.constraintlayout.widget.ConstraintLayout>