<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main8">
    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="407dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/history" />

    <TextView
        android:id="@+id/tv_del"
        android:layout_width="336dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_del"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="326dp"
        android:layout_height="241dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_del"
        app:srcCompat="@drawable/record" />

    <Button
        android:id="@+id/btn_d_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="52dp"
        android:onClick="onclick13"
        android:text="@string/btn_d_b"
        app:backgroundTint="#56A3B6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <Button
        android:id="@+id/btn_d_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="52dp"
        android:onClick="delete"
        android:text="@string/btn_d_d"
        app:backgroundTint="#F44336"
        app:layout_constraintStart_toEndOf="@+id/btn_d_b"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

</androidx.constraintlayout.widget.ConstraintLayout>