<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main1">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info" />

    <TextView
        android:id="@+id/tv_ti2"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_t1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="169dp"
        android:layout_height="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ti2"
        app:srcCompat="@drawable/bmicon" />

    <TextView
        android:id="@+id/tv_p2"
        android:layout_width="146dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_p1"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="351dp"
        android:layout_height="234dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_p2"
        app:srcCompat="@drawable/bmirange" />

    <Button
        android:id="@+id/bt_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="OnClick5"
        android:text="@string/bt_bck"
        app:backgroundTint="#56A3B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>